Fix String.isBlank() to String.trim().isEmpty() for Java 8 compilation compatibility